# text_analysis_yahoo

./: pyproject.toml  yahoo_news.csv  yahoo_news_text.ipynb
