[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "bs4>=0.0.2",
    "gensim>=4.3.2",
    "ipykernel>=6.29.5",
    "ipython>=8.28.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "notebook>=7.3.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "scipy==1.12.0",
    "seaborn>=0.13.2",
    "selenium>=4.27.1",
    "spacy>=3.7.5",
    "tqdm>=4.66.5",
    "wordcloud>=1.9.4",
]
